# PandemicSim

./: Cargo.toml
data/: WorldData.csv
src/: main.rs
