[package]
name = "PandemicSim"
version = "0.1.0"
authors = ["Ionman64 <PeterPickerill2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"